# specmonkey

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  adobe-type-tools.github.io.json  amzn.github.io.json  aomediacodec.github.io.json  arai-a.github.io.json  arrowtype.github.io.json  bestiejs.github.io.json  bjacob.github.io.json  bottosson.github.io.json  chromedevtools.github.io.json  compat.spec.whatwg.org.json  compression.spec.whatwg.org.json  console.spec.whatwg.org.json  cookiestore.spec.whatwg.org.json  cplusplus.github.io.json  developers.whatwg.org.json  dom.spec.whatwg.org.json  drafts4.csswg.org.json  encoding.spec.whatwg.org.json  es5.github.io.json  eslint-community.github.io.json  explainers-by-googlers.github.io.json  facebook.github.io.json  fedidcg.github.io.json  fetch.spec.whatwg.org.json  firefoxux.github.io.json  flatpak.github.io.json  fluffy.github.io.json  forums.whatwg.org.json  fs.spec.whatwg.org.json  fullscreen.spec.whatwg.org.json  github.io.json  google.github.io.json  googlechrome.github.io.json  googlechromelabs.github.io.json  gpuweb.github.io.json  gregtatum.github.io.json  (+84 more)
extension/: config.json  content.js  manifest.in.json  manifest.json  styles.css
scripts/: package_extension.py
specmonkey/: __main__.py  cli.py
src/: config.rs  error.rs  index.rs  lib.rs  main.rs  url_crawler.rs  util.rs
tests/: test_extract_links.py
tests/test_files/: file1.cpp  file2.h  file3.rs  file4.js  file5.html
