[build-system]
requires = ["maturin>=1.8,<2.0","setuptools"]
build-backend = "maturin"

[project]
name = "specmonkey"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = [
    "pytest>=7.1",
    "black==22.3.0",
    "flake8>=4.0",
    "isort>=5.10",
    "mypy>=0.910",
    "pre-commit>=2.19",
    "pydocstyle>=6.1",
]

[project.scripts]
# specmon = "specmonkey"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # Whitespace before ':'
    "W503",  # Line break before binary operator
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
